--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-progress": "^5.0.1",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
