--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
-    "expo": "~49.0.15",
+    "@types/react": "~18.2.14",
+    "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-progress": "^5.0.1",
-    "react-native-web": "~0.19.6"
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
