--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "~18.2.14",
     "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
