--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-progress": "^5.0.1",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.19.6",
