--- a/package.json
+++ b/package.json
@@ -18,17 +18,26 @@
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
     "expo": "^49.0.0",
+    "expo-camera": "~13.4.4",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
+    "fix": "^0.0.6",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
+    "react-native-get-location": "^4.0.1",
+    "react-native-google-place-picker": "^1.2.1",
+    "react-native-maps": "^1.11.3",
+    "react-native-permissions": "^4.1.1",
     "react-native-progress": "^5.0.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-vision-camera": "^3.8.2",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3"
   },
