--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -26,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-element-dropdown": "^2.10.2",
     "react-native-get-location": "^4.0.1",
     "react-native-google-place-picker": "^1.2.1",
     "react-native-maps": "^1.11.3",
@@ -33,10 +36,13 @@
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.1.0",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-vision-camera": "^3.8.2",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3"
