--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
+    "eas": "^0.1.0",
     "expo": "^49.0.0",
     "expo-camera": "~13.4.4",
+    "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
@@ -31,7 +33,7 @@
     "react-native-element-dropdown": "^2.10.2",
     "react-native-get-location": "^4.0.1",
     "react-native-google-place-picker": "^1.2.1",
-    "react-native-maps": "^1.11.3",
+    "react-native-maps": "1.7.1",
     "react-native-permissions": "^4.1.1",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-scanner": "^1.5.5",
@@ -40,7 +42,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^15.1.0",
+    "react-native-svg": "13.9.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.0.3",
     "react-native-vision-camera": "^3.8.2",
