--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
     "eas": "^0.1.0",
-    "expo": "^50.0.17",
+    "expo": "^50.0.18",
     "expo-camera": "~14.1.3",
     "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.5",
@@ -48,7 +48,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-vision-camera": "^3.8.2",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
