Updated to Expo 51

--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
       "package": "com.suhendra.zestify"
     },
     "web": {
+      "bundler": "metro",
       "favicon": "./assets/favicon.png"
     },
     "extra": {
