--- a/package.json
+++ b/package.json
@@ -10,40 +10,39 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@expo/webpack-config": "^19.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
     "eas": "^0.1.0",
-    "expo": "^50.0.18",
-    "expo-camera": "~14.1.3",
-    "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.5",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.0",
+    "expo-camera": "~15.0.11",
+    "expo-image-picker": "~15.0.5",
+    "expo-location": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.7.1",
     "fix": "^0.0.6",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.2",
     "react-native-element-dropdown": "^2.10.2",
     "react-native-get-location": "^4.0.1",
     "react-native-google-place-picker": "^1.2.1",
-    "react-native-maps": "1.10.0",
+    "react-native-maps": "1.14.0",
     "react-native-permissions": "^4.1.1",
     "react-native-progress": "^5.0.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-screens": "~3.29.0",
+    "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "15.2.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.0.3",
     "react-native-vision-camera": "^3.8.2",
