--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "@types/react": "~18.2.14",
     "eas": "^0.1.0",
     "expo": "^51.0.17",
-    "expo-camera": "~15.0.11",
-    "expo-image-picker": "~15.0.5",
+    "expo-camera": "^15.0.13",
+    "expo-image-picker": "^15.0.7",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.7.1",
     "fix": "^0.0.6",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "^0.74.3",
     "react-native-element-dropdown": "^2.10.2",
     "react-native-get-location": "^4.0.1",
     "react-native-google-place-picker": "^1.2.1",
