--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,13 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
     "eas": "^0.1.0",
-    "expo": "^51.0.17",
-    "expo-camera": "^15.0.13",
+    "expo": "^51.0.21",
+    "expo-camera": "^15.0.14",
     "expo-image-picker": "^15.0.7",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
@@ -30,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-element-dropdown": "^2.10.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-get-location": "^4.0.1",
     "react-native-google-place-picker": "^1.2.1",
     "react-native-maps": "1.14.0",
@@ -38,8 +40,10 @@
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "^3.31.1",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.2.0",
