Added account deletion to Settings.js

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -19,10 +19,9 @@
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
     "eas": "^0.1.0",
-    "expo": "^51.0.17",
-    "expo-camera": "^15.0.13",
+    "expo": "^51.0.24",
+    "expo-camera": "~15.0.14",
     "expo-image-picker": "^15.0.7",
-    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.7.1",
     "fix": "^0.0.6",
@@ -31,7 +30,6 @@
     "react-native": "^0.74.3",
     "react-native-element-dropdown": "^2.10.2",
     "react-native-get-location": "^4.0.1",
-    "react-native-google-place-picker": "^1.2.1",
     "react-native-maps": "1.14.0",
     "react-native-permissions": "^4.1.1",
     "react-native-progress": "^5.0.1",
@@ -45,7 +43,6 @@
     "react-native-svg": "15.2.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-vision-camera": "^3.8.2",
     "react-native-web": "~0.19.6",
     "typescript": "~5.3.3"
   },
